# LLMLocalInferenceServer

./: README.md  main.py  pyproject.toml
app/: config.py  main.py  models.py
app/engine/: batcher.py  chat_engine.py
app/model/: toy_model.py
web/: index.html
